--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="public/styles.css">
   <style>
     
   </style>
@@ -46,7 +46,7 @@
   </main>
 
 
-  <script src="script.js"></script>
+  <script src="public/script.js"></script>
 </body>
 
 </html>
