add footer - link to github and my name

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <p><span>Option 1:</span>Drag your file or click inside the dotted box to load your downloaded Freecodecamp
             solution.</p>
         </div>
-        <p class="sm-d-none" style="text-align: center; margin-bottom: .8rem">OR paste the content of the downloaded JSON into the
+        <p class="sm-d-none" style="text-align: center; margin-bottom: .8rem">OR paste the content of the downloaded
+          JSON into the
           textarea below </p>
 
         <p style="text-align: left; margin-bottom: .8rem">Paste the content of the downloaded JSON into the
@@ -52,13 +53,14 @@
       <textarea class="solution"></textarea>
     </div>
 
-
-
     </div>
 
-
   </main>
-
+  <footer>
+    <p>🙋🏻‍♂️<strong>Leandro Severino Jr / Puyih </strong></p> 
+    <a href="https://github.com/LeanSeverino1022/freecodecamp-solution-parser">👉🏻Project on Github </a>  
+  </footer>
+</br>
 
   <script src="public/script.js"></script>
 </body>
