--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>FCC Solution Parser</title>
+  <title>FCC Solution Converter</title>
   <meta name='viewport' content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' />
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -23,7 +23,7 @@
 <body>
 
   <header>
-    <h1><a href="https://www.freecodecamp.org/">Freecodecamp</a> JSON solution parser</h1>
+    <h1><a href="https://www.freecodecamp.org/">Freecodecamp</a> JSON solution converter</h1>
     <p>When you download the FCC curriculum solutions, you get a .json file with content that's not very readable. I
       created this tool to covert those JSON file to readable code.</p>
   </header>
