--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           JSON into the
           textarea below </p>
 
-        <p style="text-align: left; margin-bottom: .8rem">Paste the content of the downloaded JSON into the
+        <p class="md-d-none" style="text-align: left; margin-bottom: .8rem">Paste the content of the downloaded JSON into the
           textarea below </p>
 
         <textarea>{"index.js":"let x = 7;\nlet y = 9;\nlet result = \"to come\";\n\nif(x == y) {\n  result = \"Equal!\";\n} else {\n  result = \"Not equal!\";\n}\n\nconsole.log(result);"}</textarea>
